added local storage, clear local storage, cleaned up JS

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <div class="search-history" id="search-history">
 
           <!-- #search-history will go here  -->
-            <button class="btn btn-secondary my-2" type="submit">Search History Item 1</button>
+            <!-- <button class="btn btn-secondary my-2" type="submit">Search History Item 1</button>
             <button class="btn btn-secondary my-2" type="submit">Search History Item 2</button>    
             <button class="btn btn-secondary my-2" type="submit">Search History Item 3</button>
-            <button class="btn btn-secondary my-2" type="submit">Search History Item 4</button>
+            <button class="btn btn-secondary my-2" type="submit">Search History Item 4</button> -->
             
         </div>
 
